[package]
name = "jxpand"
description = "A tool for expanding JSON data with annotations useful for code generation."
repository = "https://github.com/rhysparry/jxpand"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["json", "cli"]
categories = ["command-line-utilities", "template-engine"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
serde_json = "1.0.149"
